[gd_scene load_steps=2 format=3 uid="uid://8mpgijni3upk"]

[ext_resource type="Script" path="res://UI/game_over_ui.gd" id="1_lwbxc"]

[node name="GameOverUI" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwbxc")

[node name="CenterPanel" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_left = 512.0
offset_top = 256.0
offset_right = 768.0
offset_bottom = 421.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterPanel"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="GameOverLabel" type="Label" parent="CenterPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "GAME OVER"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterPanel/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterPanel/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="MainMenuButton" type="Button" parent="CenterPanel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="CenterPanel/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterPanel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
